[gd_scene load_steps=9 format=3 uid="uid://dvir70o6horkr"]

[ext_resource type="Script" path="res://src/Enemy.gd" id="1_hq5kv"]
[ext_resource type="Texture2D" uid="uid://b4t0kuav5khdc" path="res://assets/proto/Red/texture_05.png" id="2_xe7qq"]
[ext_resource type="Script" path="res://src/States/StateMachine.gd" id="3_1suqh"]
[ext_resource type="Script" path="res://src/EnemyRayCast.gd" id="3_5hudb"]
[ext_resource type="Script" path="res://src/States/EnemyIdle.gd" id="4_t1bhs"]
[ext_resource type="Script" path="res://src/States/EnemyFollow.gd" id="5_sr21w"]
[ext_resource type="FontFile" uid="uid://b5uh3dlfjrdul" path="res://assets/NDS12.ttf" id="7_8654b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_81ghr"]

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_hq5kv")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_xe7qq")

[node name="Hitbox" type="CollisionShape2D" parent="."]
scale = Vector2(5.1, 5.1)
shape = SubResource("RectangleShape2D_81ghr")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(140, 0)
collision_mask = 2
script = ExtResource("3_5hudb")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_1suqh")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("4_t1bhs")
enemy = NodePath("../..")

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle"]
unique_name_in_owner = true
autostart = true

[node name="Follow" type="Node" parent="StateMachine" node_paths=PackedStringArray("enemy")]
script = ExtResource("5_sr21w")
enemy = NodePath("../..")

[node name="FollowTimer" type="Timer" parent="StateMachine/Follow"]
unique_name_in_owner = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
modulate = Color(0.1, 0.043, 0.07245, 1)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -65.0
offset_right = 95.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("7_8654b")
theme_override_font_sizes/normal_font_size = 100
theme_override_font_sizes/bold_font_size = 0
text = "â˜¹"

[connection signal="player_found" from="RayCast2D" to="StateMachine/Idle" method="_on_ray_cast_2d_player_found"]
[connection signal="player_not_found" from="RayCast2D" to="StateMachine/Follow" method="_on_ray_cast_2d_player_not_found"]
[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="StateMachine/Follow/FollowTimer" to="StateMachine/Follow" method="_on_follow_timer_timeout"]
